--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,8 +38,12 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.google.ar.sceneform.ux:sceneform-ux:1.17.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    // ArSceneView
+    implementation "io.github.sceneview:arsceneview:0.9.8"
+    // ARCore
+    def arcore_version = '1.36.0'
+    api "com.google.ar:core:$arcore_version"
 }
